--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 html{
     background-color: white;
     width: 100%;
+    font-family: Arial, Helvetica, sans-serif;
 }
 body{
     margin: 0px;
@@ -26,3 +27,13 @@ body{
     float: right;
     
 }
+#header{
+    background-image: url(feladat/képek/header.jpg);
+    height: 600px;
+    width: 100%;
+    background-size: cover;
+    text-align: center;
+    color: white;
+}
+
+
