--- a/index.css
+++ b/index.css
@@ -13,7 +13,7 @@ body{
 
 h1{
     font-size: 240%;
-    padding: 20px;
+    padding: 20px 0px;
 }
 #menu{
     height: 100px;
@@ -75,11 +75,11 @@ strong{
 
 .narancs_box{
     border: orangered solid 1px;
-    width: 120px;
+    width: max-content;
     text-align: center;
-    padding: 10px;
+    padding: 15px;
     list-style: none;
-    margin: auto;
+    margin: 30px auto;
     color: orangered;
     border-radius: 5px;
 }
@@ -101,4 +101,68 @@ strong{
 #wod, #basics, #strength{
     padding: 20px;
     width: 30%;
+}
+
+#train_tart{
+    display: flex;
+    padding: 20px;
+}
+#train_img{
+    width: 35%;
+    margin: auto;
+}
+#train_r{
+    width: 50%;
+}
+#training li{
+    float: left;
+}
+
+
+#preise{
+    background-color: rgb(196, 232, 245);
+}
+#preise_tart{
+    margin: auto;
+    padding: 20px;
+}
+#preise_top{
+    text-align: center;
+}
+#preise_bot{
+    display: flex;
+    justify-content: center;
+    padding: 20px 0px 70px 0px;
+}
+#preise_l, #preise_c, #preise_r{
+    width: 30%;
+    padding: 10px;
+}
+#preise h2{
+    text-align: left;
+    color: orangered;
+    font-size: 180%;
+    margin-top: 0px;
+}
+#preise li{
+    margin-bottom: 5px;
+}
+
+#osztott{
+    display: flex;
+    color: white;
+    text-align: center;
+    align-items: center;
+}
+#osztl, #oszt_c, #oszt_r{
+    width: 33%;
+}
+#oszt_l{
+    background-image: url(feladat/képek/start.jpg);
+}
+#oszt_c{
+    background-image: url(feladat/képek/szemelyi.jpg);
+}
+#oszt_r{
+    background-image: url(feladat/képek/tartos.jpg);
 }
