--- a/index.css
+++ b/index.css
@@ -17,11 +17,13 @@ h1{
 }
 #menu{
     display: flex;
-    height: 100px;
+    height: 130px;
     margin: 0px 80px;
+    align-items: center;
+    justify-content: center;
 }
 #logo{
-    height: 100%;
+    height: 100px;
     float: left;
 }
 #fejlec_img{
@@ -31,11 +33,9 @@ h1{
 #menu li{
     display: inline;
     color: rgba(255, 123, 0, 0.918);
-    padding: 30px;
+    padding: 20px;
 }
 #menu ul{
-    display: inline;
-    float: right;
     align-content: center;
     margin-bottom: 0px;
 }
@@ -67,13 +67,14 @@ h1,h2,h3,h4{
     margin: 50px;
 }
 #box_video{
-    max-width: 53%;
+    max-width: 50%;
     height: max-content;
-    vertical-align: middle; 
+    align-self: center;
 }
 #box_video img{
-    width: 100%;
-    height: 100%;
+    width: 90%;
+    height: 90%;
+    float: right;
 }
 #box_r{
     width: 45%;
@@ -228,23 +229,36 @@ h1,h2,h3,h4{
     height: 100px;
 }
 #folge_img{
-
     width: 100%;
 }
 #folge_img img{
     width: 60px;
+    margin: 0px 20px;
 }
 
 @media only screen and (min-width: 400px) and (max-width: 850px){
     #box_tart, #dich_text, #miss_tart, #train_tart, #preise_tart, #preise_bot{
         display: block;
-        margin: 30px 0px;
-        
+        margin: 30px 0px; 
     }
     #box_video, #box_r, #train_img, #train_r, #miss_img, #miss_r, #preise_l, #preise_c, #preise_r{
         margin: auto;
-        width: 80%;
+        width: 75%;
+        max-width: 80%;
         padding: 30px 0px;
+        
+    }
+    #box_video, #train_img{
+        display: flex;
+        height: fit-content;
+        justify-content: center;
+    }
+    #box_r, #train_r{
+        width: 60%;
+    }
+    #box_video img, #train_img img{
+        width: 75%;
+        float: none;
     }
     #wod, #basics, #strength{
         width: 100%;
